[metadata]
name = dsa
version = 0.0.1
author = Mark Mizzi
author_email = mizzimark2001@gmail.com
description = Model implementations of some data structures and algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarkMizzi/dsa-examples
project_urls =
    Bug Tracker = https://github.com/MarkMizzi/dsa-examples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
